--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "",
+    "url": "https://github.com/zenghr0820/vuepress-plugin-encrypt.git",
     "directory": ""
   },
   "keywords": [
@@ -22,9 +22,9 @@
   "author": "Zenghr",
   "license": "MIT",
   "bugs": {
-    "url": ""
+    "url": "https://github.com/zenghr0820/vuepress-plugin-encrypt/issues"
   },
-  "homepage": "",
+  "homepage": "https://github.com/zenghr0820/vuepress-plugin-encrypt#readme",
   "dependencies": {
     "aes-js": "^3.1.2",
     "chalk": "^3.0.0",
