完善文档，修复若干问题

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "vuepress-plugin-encrypt",
   "version": "2.0.17",
-  "description": "一个用于 VuePress 2.x 的内容加密插件",
+  "description": "vuepress-plugin-encrypt 一个基于 VuePress 2.x 的内容加密插件",
   "type": "module",
   "main": "lib/node/index.js",
   "types": "lib/node/index.d.ts",
